--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c64fa296",
+   "id": "887e51a5",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e69e9c9d",
+   "id": "c592cc9f",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fad67c5",
+   "id": "7bc381fb",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4a65f3e",
+   "id": "2e5677ff",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53107066",
+   "id": "2dee4cae",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37958cf3",
+   "id": "af9d108a",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "48fce48b",
+   "id": "12ea0f30",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:17:16.719044Z",
-     "iopub.status.busy": "2025-01-30T14:17:16.718838Z",
-     "iopub.status.idle": "2025-01-30T14:17:20.170641Z",
-     "shell.execute_reply": "2025-01-30T14:17:20.170008Z"
+     "iopub.execute_input": "2025-01-30T15:20:10.280072Z",
+     "iopub.status.busy": "2025-01-30T15:20:10.279890Z",
+     "iopub.status.idle": "2025-01-30T15:20:13.348450Z",
+     "shell.execute_reply": "2025-01-30T15:20:13.347924Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bead97b",
+   "id": "400cb894",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c714d47d",
+   "id": "81427e2b",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fad9e83",
+   "id": "594006c4",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39257c12",
+   "id": "397b2f4c",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e85f69e0",
+   "id": "051c0764",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "068a18dc",
+   "id": "c9006eba",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cb629f5",
+   "id": "a2deaa43",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30678515",
+   "id": "10d0f132",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "db12ddef",
+   "id": "d8325afd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:17:20.173164Z",
-     "iopub.status.busy": "2025-01-30T14:17:20.172657Z",
-     "iopub.status.idle": "2025-01-30T14:17:22.407399Z",
-     "shell.execute_reply": "2025-01-30T14:17:22.406830Z"
+     "iopub.execute_input": "2025-01-30T15:20:13.350621Z",
+     "iopub.status.busy": "2025-01-30T15:20:13.350342Z",
+     "iopub.status.idle": "2025-01-30T15:20:15.325945Z",
+     "shell.execute_reply": "2025-01-30T15:20:15.325380Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80657e1d",
+   "id": "5a00351f",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "17defb9d",
+   "id": "9ed6a9c9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:17:22.409319Z",
-     "iopub.status.busy": "2025-01-30T14:17:22.409130Z",
-     "iopub.status.idle": "2025-01-30T14:17:22.412421Z",
-     "shell.execute_reply": "2025-01-30T14:17:22.411767Z"
+     "iopub.execute_input": "2025-01-30T15:20:15.327883Z",
+     "iopub.status.busy": "2025-01-30T15:20:15.327680Z",
+     "iopub.status.idle": "2025-01-30T15:20:15.331209Z",
+     "shell.execute_reply": "2025-01-30T15:20:15.330621Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b99b91c9",
+   "id": "879b66e0",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d7f49cd",
+   "id": "97b7d840",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5399922a",
+   "id": "dca8c067",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7c2fb32",
+   "id": "ebe992f5",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e083486a",
+   "id": "e8fcaba3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:17:22.414185Z",
-     "iopub.status.busy": "2025-01-30T14:17:22.414010Z",
-     "iopub.status.idle": "2025-01-30T14:17:22.459800Z",
-     "shell.execute_reply": "2025-01-30T14:17:22.459235Z"
+     "iopub.execute_input": "2025-01-30T15:20:15.333050Z",
+     "iopub.status.busy": "2025-01-30T15:20:15.332865Z",
+     "iopub.status.idle": "2025-01-30T15:20:15.379393Z",
+     "shell.execute_reply": "2025-01-30T15:20:15.378828Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec756a3d",
+   "id": "f9686f2c",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8303c0f8",
+   "id": "c6927986",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:17:22.461875Z",
-     "iopub.status.busy": "2025-01-30T14:17:22.461411Z",
-     "iopub.status.idle": "2025-01-30T14:17:22.531110Z",
-     "shell.execute_reply": "2025-01-30T14:17:22.530491Z"
+     "iopub.execute_input": "2025-01-30T15:20:15.381218Z",
+     "iopub.status.busy": "2025-01-30T15:20:15.381021Z",
+     "iopub.status.idle": "2025-01-30T15:20:15.451471Z",
+     "shell.execute_reply": "2025-01-30T15:20:15.450873Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "064201f7",
+   "id": "b041c580",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee5f3ab8",
+   "id": "9c700a50",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "86e98e1f",
+   "id": "2b9113e4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:17:22.533121Z",
-     "iopub.status.busy": "2025-01-30T14:17:22.532773Z",
-     "iopub.status.idle": "2025-01-30T14:17:22.562300Z",
-     "shell.execute_reply": "2025-01-30T14:17:22.561784Z"
+     "iopub.execute_input": "2025-01-30T15:20:15.453645Z",
+     "iopub.status.busy": "2025-01-30T15:20:15.453151Z",
+     "iopub.status.idle": "2025-01-30T15:20:15.480178Z",
+     "shell.execute_reply": "2025-01-30T15:20:15.479628Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64504085",
+   "id": "7cb5ffee",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb326fe5",
+   "id": "1f85a475",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3949866",
+   "id": "51e914e2",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1eb84bd7",
+   "id": "a1e01d82",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d6393a6",
+   "id": "6f123746",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a78305c7",
+   "id": "5eb2b3d9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:17:22.564410Z",
-     "iopub.status.busy": "2025-01-30T14:17:22.564041Z",
-     "iopub.status.idle": "2025-01-30T14:17:22.568114Z",
-     "shell.execute_reply": "2025-01-30T14:17:22.567512Z"
+     "iopub.execute_input": "2025-01-30T15:20:15.482377Z",
+     "iopub.status.busy": "2025-01-30T15:20:15.482029Z",
+     "iopub.status.idle": "2025-01-30T15:20:15.486097Z",
+     "shell.execute_reply": "2025-01-30T15:20:15.485517Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59cec5e0",
+   "id": "72fd56d5",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "dc36a13b",
+   "id": "cb9919ef",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:17:22.569952Z",
-     "iopub.status.busy": "2025-01-30T14:17:22.569605Z",
-     "iopub.status.idle": "2025-01-30T14:17:22.572546Z",
-     "shell.execute_reply": "2025-01-30T14:17:22.572095Z"
+     "iopub.execute_input": "2025-01-30T15:20:15.487952Z",
+     "iopub.status.busy": "2025-01-30T15:20:15.487630Z",
+     "iopub.status.idle": "2025-01-30T15:20:15.492071Z",
+     "shell.execute_reply": "2025-01-30T15:20:15.491489Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d364d7f",
+   "id": "d316a38c",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d6b7d052",
+   "id": "72b3adfb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:17:22.574195Z",
-     "iopub.status.busy": "2025-01-30T14:17:22.574036Z",
-     "iopub.status.idle": "2025-01-30T14:17:25.287369Z",
-     "shell.execute_reply": "2025-01-30T14:17:25.286749Z"
+     "iopub.execute_input": "2025-01-30T15:20:15.493771Z",
+     "iopub.status.busy": "2025-01-30T15:20:15.493579Z",
+     "iopub.status.idle": "2025-01-30T15:20:18.093199Z",
+     "shell.execute_reply": "2025-01-30T15:20:18.092673Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69604832",
+   "id": "9b772d16",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08c554a8",
+   "id": "26a72c39",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdbc83e6",
+   "id": "835dec71",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adbe6e27",
+   "id": "71013762",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fda9d27a",
+   "id": "f60d2a7a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:17:25.289474Z",
-     "iopub.status.busy": "2025-01-30T14:17:25.289132Z",
-     "iopub.status.idle": "2025-01-30T14:17:25.292807Z",
-     "shell.execute_reply": "2025-01-30T14:17:25.292193Z"
+     "iopub.execute_input": "2025-01-30T15:20:18.095170Z",
+     "iopub.status.busy": "2025-01-30T15:20:18.094977Z",
+     "iopub.status.idle": "2025-01-30T15:20:18.098870Z",
+     "shell.execute_reply": "2025-01-30T15:20:18.098290Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fce117d79c0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f58e9ce8540>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86ae45f8",
+   "id": "b750f8c8",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d973065c",
+   "id": "5639e961",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d75d7ae2",
+   "id": "38493aea",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4a123ae",
+   "id": "137ebc9c",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b27b11c3",
+   "id": "16775f1a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:17:25.294746Z",
-     "iopub.status.busy": "2025-01-30T14:17:25.294392Z",
-     "iopub.status.idle": "2025-01-30T14:17:25.297552Z",
-     "shell.execute_reply": "2025-01-30T14:17:25.297091Z"
+     "iopub.execute_input": "2025-01-30T15:20:18.100753Z",
+     "iopub.status.busy": "2025-01-30T15:20:18.100426Z",
+     "iopub.status.idle": "2025-01-30T15:20:18.103329Z",
+     "shell.execute_reply": "2025-01-30T15:20:18.102715Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "df91f76f",
+   "id": "d2a62f57",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:17:25.299141Z",
-     "iopub.status.busy": "2025-01-30T14:17:25.298975Z",
-     "iopub.status.idle": "2025-01-30T14:17:26.389513Z",
-     "shell.execute_reply": "2025-01-30T14:17:26.388885Z"
+     "iopub.execute_input": "2025-01-30T15:20:18.105019Z",
+     "iopub.status.busy": "2025-01-30T15:20:18.104842Z",
+     "iopub.status.idle": "2025-01-30T15:20:19.165442Z",
+     "shell.execute_reply": "2025-01-30T15:20:19.164917Z"
     }
    },
    "outputs": [
